<resources>
    <string name="app_name">NTorrent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="internet_message">No internet connection found.</string>

    <string name="torrentz">Torrent</string>
    <string name="storage">Internal Storage</string>
    <string name="extstorage">External Storage</string>
    <string name="rootdirectory">Root</string>
    <string name="downloading_speed">Down Speed -</string>
    <string name="uploading_speed">Up Speed -</string>
    <string name="search_cont_desc">Content Description</string>
    <string name="paused">Paused</string>
    <string name="running">Running</string>
    <string name="search_hint">Search</string>
    <string name="select_directory">Download Location</string>

    <string name="search_name">SearchLibrary</string>
    <string name="please_wait">Please wait…</string>
    <string name="parsing">Finding Download Link</string>
    <string name="queued">Queued</string>
    <string name="finished">Finished</string>
    <string name="movies">Movies</string>
    <string name="new_folder">New Folder</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="select_sd_card">Select SD Card</string>
    <string name="tv_shows">TV Shows</string>
    <string name="bookmars">Bookmarks</string>
    <string name="not_bookMarked">You have not bookmarked anything.</string>
    <string name="no_share">No data to share</string>
    <string name="download_app">Hey mate download this awesome app</string>
    <string name="favourite_network">Select your favourite network</string>
    <string name="activity_detail_label_tagline">Tagline</string>
    <string name="activity_detail_label_description">Description</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mollis nunc massa, quis suscipit orci mattis a. Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum. Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum. Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Ut vestibulum, Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Morbi ac dui in lacus finibus hendrerit. Ut vestibulum, Nulla rutrum fringilla finibus. Morbi ac dui in lacus finibus hendrerit. Ut vestibulum</string>
    <string name="activity_detail_reviews_description">Reviews</string>
    <string name="technical_difficulty">Somethign went wrong. Please try again later.</string>
    <string name="no_more_data">No more data available.</string>
    <string name="found_download">We have found a download link. Would you like to download now?</string>
    <string name="sorry_torrent">Sorry could n\'t download torrent. You can try yourself by clicking on
        any torrent website.</string>
    <string name="pause">Pause</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="details">General</string>
    <string name="status">Transfer</string>
    <string name="tracker">Trackers</string>
    <string name="no_queue_torrents">You have not added any Torrents.</string>
    <string name="no_finished">No finished Torrents.</string>
    <string name="shut_down">Shut Down</string>
    <string name="resume">Resume</string>
    <string name="stopped">Stopped</string>
    <string name="downloading">Downloading</string>
    <string name="connecting">Connecting…</string>
    <string name="seeding">Seeding</string>
    <string name="seeders">Seeders:</string>
    <string name="leechers">Leechers:</string>
    <string name="uploaded_date">Date:</string>
    <string name="download_hint">Your download has started. You can manage your download from main screen or from notification.</string>
    <string name="r_t_app_title">Rate us</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="send_suggestion">Send Suggestion</string>
    <string name="r_t_app_message">If you enjoy this app, please take a moment to rate this app. It won\'t take more than a minute. Thank you for your support!</string>
    <string name="r_t_app_ok">Rate now</string>
    <string name="r_t_app_neutral">Later</string>
    <string name="r_t_app_cancel">No</string>
    <string name="invitation_title">NTorrent Invitation</string>
    <string name="invitation_message">This app is terrific, you can download any torrent quickly.</string>
    <string name="invitation_cta">Install!</string>
    <!--Torrent detail-->
    <string name="name">Name</string>
    <string name="storage_path">Download Location</string>
    <string name="directory">Directory</string>
    <string name="total_size">Total Size</string>
    <string name="number_of_files">Number of files</string>
    <string name="speed_limits">Speed Limits</string>
    <string name="date_added">Date Added</string>
    <string name="hash">Hash</string>
    <string name="created_date">Torrent Creation Date</string>
    <string name="unlimited">Unlimited</string>
    <string name="downloaded">Downloaded</string>
    <string name="uploaded">Uploaded</string>
    <string name="download_speed">Download Speed</string>
    <string name="upload_speed">Upload Speed</string>
    <string name="down_limit">Down Limit</string>
    <string name="up_limit">Up Limit</string>
    <string name="status_text">Status</string>
    <string name="seeds">Seeds</string>
    <string name="noappfound">No App found to open this file</string>
    <string name="openwith">Open with</string>
    <string name="text">Text</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="other">Other</string>
    <string name="image">Image</string>
    <string name="openas">Open As</string>
    <string name="peers">Peers</string>
    <string name="share_ratio">Share Ratio</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="activity_detail_confirmation">Saved !!</string>
    <string name="review_written_by">Review written by</string>
    <string name="videos">Videos</string>
    <string name="share">Share</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="trailer">Trailer</string>
    <string name="select">Select</string>
    <string name="selected">Selected</string>
    <string name="select_files_to_download">Select Files To Download</string>
    <string name="add_torrent">Add Torrent</string>
    <string name="downloading_file">Please Wait a moment</string>
    <string name="couldnot_add_torrent">Sorry could not add torrent</string>
    <string name="download_location">Download Location</string>
    <string name="files_to_download">Files To Download</string>
    <string name="files">files</string>
    <string name="file">File</string>
    <string name="toast_crash">Crash Reported</string>
    <string name="free">free</string>
    <string name="delete">Delete</string>
    <string name="upload_limit">Set upload limit</string>
    <string name="download_limit">Set download limit</string>
    <string name="open_folder">Open Folder</string>
    <string name="limits">Limits</string>
    <string name="speed_limit">Speed limits</string>
    <string name="download_limit_setting">Download limit</string>
    <string name="upload_limit_setting">Upload limit</string>
    <string name="incoming_port">Incoming Port</string>
    <string name="seeding_limits">Seeding limits</string>
    <string name="enable_share_ratio">Enable share ratio limit</string>
    <string name="stop_seeding_limit">Stop seeding at the specified share ratio</string>
    <string name="share_ratio_preference">Share ratio (uploaded / downloaded data)</string>
    <string name="stop_seeding_time">Stop seeding after the specified time</string>
    <string name="enable_seeding_limit">Enable seeding time limit</string>
    <string name="seeding_time_limit">Seeding time limit</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="download_something">Want to download something.</string>
    <string name="start_search">Start Searching…</string>
    <string name="port_hint">Incrementing this number up by one can help solve some types of network connection issues.</string>
    <string name="tcp_port">Incoming TCP port</string>
    <string name="loading_data">Loading More Data</string>
    <string name="select_year">Select Year</string>
    <string name="genres">Genres</string>
    <string name="search_movie">Movie,Tv</string>
    <string name="no_data_available">No data available.</string>
    <string name="share_app">Share App</string>
    <string name="n_torrent_download">NTorrent Download</string>
    <string name="download_n_text">Download this terrific app to download torrents.</string>
    <string-array name="settings">
        <item>@string/limits</item>
        <!-- <item>Scheduling</item>-->
        <item>Network Settings</item>
        <!--<item>Power Management</item>
        <item>Interface</item>-->
    </string-array>



     <string name="star_data">
            M 200.30535,69.729172
            C 205.21044,69.729172 236.50709,141.52218 240.4754,144.40532
            C 244.4437,147.28846 322.39411,154.86809 323.90987,159.53312
            C 325.42562,164.19814 266.81761,216.14828 265.30186,220.81331
            C 263.7861,225.47833 280.66544,301.9558 276.69714,304.83894
            C 272.72883,307.72209 205.21044,268.03603 200.30534,268.03603
            C 195.40025,268.03603 127.88185,307.72208 123.91355,304.83894
            C 119.94524,301.9558 136.82459,225.47832 135.30883,220.8133
            C 133.79307,216.14828 75.185066,164.19813 76.700824,159.53311
            C 78.216581,154.86809 156.16699,147.28846 160.13529,144.40532
            C 164.1036,141.52218 195.40025,69.729172 200.30535,69.729172
    </string>

    <string name="star_lollipop">
            M 223.42,133.484
            C 237.895,98.1973 280.378,100.58 295.49,133.484
            C 302.176,148.044 293.576,165.914 270.253,183.357
            C 264.16,187.914 268.606,245.136 268.606,248.852
            C 268.606,256.589 268.606,295.171 268.606,302.907
            C 268.606,322.848 268.606,329.725 268.606,339.649
            C 268.606,347.385 255.048,349.681 255.048,339.649
            C 255.048,331.913 255.361,310.637 255.048,302.907
            C 254.579,291.371 255.048,256.788 255.048,249.052
            C 255.048,238.561 254.706,187.75 248.302,183.489
            C 221.536,165.677 218.848,144.628 223.42,133.484
    </string>
    <string name="title_activity_player_view_demo">PlayerViewDemoActivity</string>
    <string name="title_activity_torrent_dialog">TorrentDialog</string>
    <string name="title_activity_base_activity_second">BaseActivitySecond</string>
</resources>
