<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"

    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/view_margin_high"
                android:paddingRight="@dimen/view_margin_high"
                android:paddingTop="@dimen/view_margin_high"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_limit"
                    android:textColor="@color/colorAccent"
                    />

                <LinearLayout
                    android:id="@+id/downloadLimitContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/view_margin_medium"
                        android:text="@string/download_limit_setting"
                        android:textSize="@dimen/above_medium_text_size"
                        />

                    <TextView
                        android:id="@+id/downloadLimit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="No Limit"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/view_margin_high"
                android:paddingRight="@dimen/view_margin_high"
                android:paddingTop="@dimen/view_margin_high"
                >

                <LinearLayout
                    android:id="@+id/uploadLimitContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_medium"
                    android:text="@string/upload_limit_setting"
                    android:textSize="@dimen/above_medium_text_size"
                    />

                <TextView
                    android:id="@+id/uploadLimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="No Limit"
                    />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/view_margin_high"
                android:paddingRight="@dimen/view_margin_high"
                android:paddingTop="@dimen/view_margin_high"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seeding_limits"
                    android:textColor="@color/colorAccent"
                    />

                <LinearLayout
                    android:id="@+id/seedingCheckboxContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/view_margin_medium"
                            android:text="@string/enable_share_ratio"
                            android:textSize="@dimen/above_medium_text_size"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stop_seeding_limit"
                            />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/shareCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shareRatioEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/view_margin_high"
                    android:paddingTop="@dimen/view_margin_high"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_ratio_preference"
                        android:textSize="@dimen/above_medium_text_size"
                        />

                    <TextView
                        android:id="@+id/shareRatioText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.0"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/stopSeedingAfterTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/view_margin_high"
                    android:paddingTop="@dimen/view_margin_high"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stop_seeding_time"
                            android:textSize="@dimen/above_medium_text_size"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enable_seeding_limit"
                            />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/seedingCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/seedingLimitContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/view_margin_high"
                    android:paddingTop="@dimen/view_margin_high"
                    >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seeding_time_limit"
                        android:textSize="@dimen/above_medium_text_size"
                        />

                    <TextView
                        android:id="@+id/seedingTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2h 0m"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>