<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_gravity="fill_vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/view_margin_high"
        android:paddingRight="@dimen/view_margin_high"
        android:paddingBottom="?attr/actionBarSize"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/view_margin_medium"
            android:paddingBottom="@dimen/view_margin_medium"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downloaded"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text_size"
                />
            <TextView
                android:id="@+id/downloaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Kung fu panda"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/view_margin_medium"
            android:paddingBottom="@dimen/view_margin_medium"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploaded"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text_size"
                />
            <TextView
                android:id="@+id/uploaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Kung fu panda"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/view_margin_medium"
            android:paddingBottom="@dimen/view_margin_medium"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_speed"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text_size"
                />
            <TextView
                android:id="@+id/downloadingSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Kung fu panda"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/view_margin_medium"
            android:paddingBottom="@dimen/view_margin_medium"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_speed"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text_size"
                />
            <TextView
                android:id="@+id/uploadingSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Kung fu panda"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/view_margin_medium"
            android:paddingBottom="@dimen/view_margin_medium"
            android:id="@+id/dateAddedContainer"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/down_limit"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text_size"
                />
            <TextView
                android:id="@+id/DownLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Kung fu panda"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/view_margin_medium"
            android:paddingBottom="@dimen/view_margin_medium"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up_limit"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text_size"
                />
            <TextView
                android:id="@+id/upLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Kung fu panda"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/view_margin_medium"
            android:paddingBottom="@dimen/view_margin_medium"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seeds"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text_size"
                />
            <TextView
                android:id="@+id/seeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Kung fu panda"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/view_margin_medium"
            android:paddingBottom="@dimen/view_margin_medium"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peers"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text_size"
                />
            <TextView
                android:id="@+id/peers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Kung fu panda"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/view_margin_medium"
            android:paddingBottom="@dimen/view_margin_medium"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_ratio"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text_size"
                />
            <TextView
                android:id="@+id/shareRatio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Kung fu panda"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/view_margin_medium"
            android:paddingBottom="@dimen/view_margin_medium"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_text"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text_size"
                />
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Kung fu panda"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>


